trunk/Archive2/2b/baf95ef6912417/output
main.cpp: In function 'int main()':
main.cpp:7:25: error: no matching function for call to 'sort(std::vector<int>&, std::vector<int>::iterator)'
     std::sort(v, v.end());
                         ^
In file included from /usr/local/include/c++/5.1.0/algorithm:62:0,
                 from main.cpp:3:
/usr/local/include/c++/5.1.0/bits/stl_algo.h:4689:5: note: candidate: template<class _RAIter> void std::sort(_RAIter, _RAIter)
     sort(_RandomAccessIterator __first, _RandomAccessIterator __last)
     ^
/usr/local/include/c++/5.1.0/bits/stl_algo.h:4689:5: note:   template argument deduction/substitution failed:
main.cpp:7:25: note:   deduced conflicting types for parameter '_RAIter' ('std::vector<int>' and '__gnu_cxx::__normal_iterator<int*, std::vector<int> >')
     std::sort(v, v.end());
                         ^
In file included from /usr/local/include/c++/5.1.0/algorithm:62:0,
                 from main.cpp:3:
/usr/local/include/c++/5.1.0/bits/stl_algo.h:4718:5: note: candidate: template<class _RAIter, class _Compare> void std::sort(_RAIter, _RAIter, _Compare)
     sort(_RandomAccessIterator __first, _RandomAccessIterator __last,
     ^
/usr/local/include/c++/5.1.0/bits/stl_algo.h:4718:5: note:   template argument deduction/substitution failed:
main.cpp:7:25: note:   deduced conflicting types for parameter '_RAIter' ('std::vector<int>' and '__gnu_cxx::__normal_iterator<int*, std::vector<int> >')
     std::sort(v, v.end());
                         ^
